--- a/EmployeePayRollApp/src/main/resources/application.properties
+++ b/EmployeePayRollApp/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Set the active profile (default is dev)
+spring.profiles.active=dev
