[Mohit Soni] Add. Database setting as Environment Variable

--- a/EmployeePayRollApp/src/main/resources/application.properties
+++ b/EmployeePayRollApp/src/main/resources/application.properties
@@ -24,4 +24,14 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Set the active profile (default is dev)
-spring.profiles.active=dev
+#spring.profiles.active=dev
+
+# Set logging level for the application
+logging.level.com.bridgelabz=INFO
+
+# Enable SQL logging (optional)
+
+
+# Log pattern format
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
