--- a/EmployeePayRollApp/pom.xml
+++ b/EmployeePayRollApp/pom.xml
@@ -71,6 +71,18 @@
 			<artifactId>jakarta.validation-api</artifactId>
 			<version>3.0.2</version>
 		</dependency>
+			<!-- Spring Boot Starter for JDBC -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-data-jpa</artifactId>
+			</dependency>
+
+			<!-- MySQL Driver -->
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<scope>runtime</scope>
+			</dependency>
 
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
