--- a/EmployeePayRollApp/src/main/resources/application-dev.properties
+++ b/EmployeePayRollApp/src/main/resources/application-dev.properties
@@ -2,6 +2,6 @@
 Spring.profiles.active = dev
 environment = COMMON
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource url = jdbc:mysql://localhost:3306/employeesdb
-spring.datasource.username = root
+spring.datasource url = jdbc:mysql://localhost:3306/payroll_db
+spring.datasource.username = payrolluser
 spring.datasource.password = Mohit@887
