--- a/EmployeePayRollApp/src/main/resources/application.properties
+++ b/EmployeePayRollApp/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.application.name=EmployeePayrollApp
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
 
-spring.datasource.url=jdbc:mysql://localhost:3306/employeesdb
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/payroll_db
+spring.datasource.username=payrolluser
 spring.datasource.password=Mohit@887
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
