[Mohit Soni] Add. Provide User Friendly Error Response in case validation fails

--- a/EmployeePayRollApp/src/main/resources/application.properties
+++ b/EmployeePayRollApp/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.application.name=EmployeePayrollApp
 #spring.h2.console.path=/h2-console
 
 spring.datasource.url=jdbc:mysql://localhost:3306/payroll_db
+
+
 spring.datasource.username=payrolluser
 spring.datasource.password=Mohit@887
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -29,8 +31,8 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Set logging level for the application
 logging.level.com.bridgelabz=INFO
 
-# Enable SQL logging (optional)
-
+# Spring DevTools
+spring.devtools.add-properties=false
 
 # Log pattern format
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
