--- a/EmployeePayRollApp/src/main/resources/application-dev.properties
+++ b/EmployeePayRollApp/src/main/resources/application-dev.properties
@@ -5,3 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource url = jdbc:mysql://localhost:3306/payroll_db
 spring.datasource.username = payrolluser
 spring.datasource.password = Mohit@887
+spring.devtools.add-properties = false
